Add permanent GitHub storage for events - Add api/save-event.js, @octokit/rest dependency, GitHub integration

--- a/editor.html
+++ b/editor.html
@@ -89,6 +89,11 @@
         </div>
 
         <div class="status-messages">
+            <div class="info-message" style="background: #e3f2fd; color: #1976d2; padding: 15px; border-radius: 8px; margin-bottom: 20px;">
+                <strong>ℹ️ Informacja:</strong> Wydarzenia są teraz zapisywane trwale do GitHub repo. 
+                Admin musi skonfigurować GitHub Personal Access Token w ustawieniach Vercel.
+            </div>
+            
             <div id="successMessage" class="message success" style="display: none;">
                 ✅ Obrazek został dodany do kalendarza!
             </div>
